# ai-incident-reliability-copilot

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a2251bf239fe_acknowledge_status_added_in_incidents_.py  cfdad1797ac4_add_cascade_delete_to_incidents_table.py
backend/app/: main.py
backend/app/api/routes/: alerts.py  health.py  incidents.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  alert.py  incident.py  incident_event.py  user.py
backend/app/schemas/: alert.py  incident.py
backend/app/security/: jwt.py  permissions.py
backend/app/services/: alert_service.py  incident_service.py  incident_state_machine.py
backend/tests/: test_alerts.py  test_health.py  test_incident_status.py  test_incidents.py
daily-log/: day-02.md  day-03.md  day-04.md
docs/: incident-lifecycle.md
