[project]
name = "ai-incident-reliability-copilot-backend"
version = "0.1.0"
description = "Backend for AI Incident and Reliability Copilot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "alembic",
    "passlib[bcrypt]",
    "pyjwt"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "httpx2"
]